# osmpbf

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  build_proto.rs
.github/workflows/: ci.yml
benches/: counter_bench.rs
examples/: count.rs  indexed.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: .blob.rs.swo  .block.rs.swo  blob.rs  block.rs  dense.rs  elements.rs  error.rs  errors.rs  hungry_count.rs  indexed.rs  indexing_par_reader.rs  lib.rs  mmap_blob.rs  par_reader.rs  range_reader.rs  reader.rs  util.rs  writer.rs
src/proto/: fileformat.rs  mod.rs  osmformat.proto  osmformat.rs
tests/: loc_on_ways.osm.pbf  read.rs  test.osm  test.osm.pbf  test_nozlib.osm.pbf  test_nozlib_nodense.osm.pbf
