[package]
name = "osmpbf"
version = "0.2.8"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
repository = "https://github.com/b-r-u/osmpbf"
homepage = "https://github.com/b-r-u/osmpbf"
description = "A reader for the OpenStreetMap PBF file format (*.osm.pbf)."
categories = ["parser-implementations", "encoding", "science"]
keywords = ["openstreetmap", "osm", "pbf", "protocolbuffer", "protobuf"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
# Note that both libz and libz-ng can be enabled at the same time.
# In this case libz will use the ng version internally.
default = ["system-libz"]
system-libz = ["flate2", "flate2/zlib"]
system-libz-ng = ["flate2", "flate2/zlib-ng"]

[dependencies]
byteorder = "1.4"
flate2 = { version = "1.0", default-features = false, optional = true }
inflate = "0.4"
memmap2 = "0.5"
protobuf = "3.1"
rayon = "1.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.3", features = ["html_reports"] }

[build-dependencies]
protobuf-codegen = "3.1"

[[bench]]
name = "counter_bench"
harness = false
