[package]
name = "osmpbf"
version = "0.3.2"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
repository = "https://github.com/b-r-u/osmpbf"
homepage = "https://github.com/b-r-u/osmpbf"
description = "A reader for the OpenStreetMap PBF file format (*.osm.pbf)."
categories = ["parser-implementations", "encoding", "science"]
keywords = ["openstreetmap", "osm", "pbf", "protocolbuffer", "protobuf"]
rust-version = "1.65"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["rust-zlib"]
rust-zlib = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
byteorder = "1.4"
flate2 = { version = "1.0", default-features = false }
memmap2 = "0.5"
protobuf = "3.1"
rayon = "1.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.3", features = ["html_reports"] }

[build-dependencies]
protobuf-codegen = "3.1"

[[bench]]
name = "counter_bench"
harness = false
