[package]
name = "osmpbf"
version = "0.3.4"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
repository = "https://github.com/b-r-u/osmpbf"
homepage = "https://github.com/b-r-u/osmpbf"
description = "A reader for the OpenStreetMap PBF file format (*.osm.pbf)."
categories = ["parser-implementations", "encoding", "science"]
keywords = ["openstreetmap", "osm", "pbf", "protocolbuffer", "protobuf"]
rust-version = "1.74"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
async = ["async-stream", "bytes", "object_store", "protobuf/with-bytes", "tokio", "tokio/io-util", "tokio-stream"]
default = ["rust-zlib"]
rust-zlib = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
async-stream = { version = "0.3.5", optional = true }
byteorder = "1.4"
bytes = { version = "1.7.1", optional = true }
flate2 = { version = "1.0", default-features = false }
memmap2 = "0.5"
object_store = { version = "0.10.2", optional = true }
protobuf = "3.1"
rayon = "1.5"
tokio = { version =  "1.38.1", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.3", features = ["html_reports"] }
tokio-test = "0.4.2"
futures-util = "0.3.21"

[build-dependencies]
protobuf-codegen = "3.1"

[[bench]]
name = "counter_bench"
harness = false
